# SSGL

./: .gitignore  CMakeLists.txt  README.md
include/: SSGL.h  SSGLEvent.h  SSGLPoint.h  SSGLRect.h  SSGLSurface.h  SSGLWindow.h  Sharp.h  SharpEvent.h  SharpPoint.h  SharpRect.h  SharpSurface.h  SharpWindow.h
src/: SSGLevent.c  SSGLsurface.c  SSGLwindow.c  sharpevent.c  sharpsurface.c  sharpwindow.c
